Chore: - worksapce name 수정 - @deungbul/design-system 프로젝트 추가 - esbuild 설정 추가

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@30k/boilerplate",
+  "name": "@deungbul/workspaces",
   "private": true,
   "workspaces": [
-    "app"
+    "app",
+    "packages/*"
   ],
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
